# ZuriHngTask5

./: README.md  build.sh  pyproject.toml  tasks.py
Task5/: asgi.py  settings.py  urls.py  wsgi.py
core/: handler.py  models.py  tasks.py  urls.py  views.py
