[tool.poetry]
name = "zurihngtask5"
version = "0.1.0"
description = ""
authors = ["Ayomide <ayomidet905@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.0"
gunicorn = "^21.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
